k8s/05-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: taskapp
  labels: { app: web }
spec:
  replicas: 2
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: ${ACR_LOGIN_SERVER}/taskweb:${IMAGE_TAG}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests: { cpu: "20m", memory: "32Mi" }
            limits:   { cpu: "100m", memory: "96Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: taskapp
spec:
  selector: { app: web }
  ports:
    - port: 80
      targetPort: 80
